# SimpleChatApplication

./: CMakeLists.txt  readme.md
ext/: CMakeLists.txt
src/: client_mode.h  display.cpp  display.h  main.cpp  message.h  network_processor.cpp  network_processor.h
src/glad/: glad.c  glad.h
src/imgui/: imgui.cpp  imgui.h  imgui_widgets.cpp
